--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@mantine/core": "^7.11.0",
+    "@mantine/dates": "^7.11.1",
     "@mantine/hooks": "^7.11.0",
     "@tabler/icons-react": "^3.7.0",
     "@tanstack/react-query": "^5.49.2",
+    "dayjs": "^1.11.11",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
