--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/firebase-adapter": "^2.4.1",
     "@mantine/core": "^7.11.0",
     "@mantine/dates": "^7.11.1",
     "@mantine/hooks": "^7.11.0",
+    "@next-auth/firebase-adapter": "^2.0.1",
     "@tabler/icons-react": "^3.7.0",
     "@tanstack/react-query": "^5.49.2",
     "dayjs": "^1.11.11",
+    "firebase": "^10.12.3",
+    "firebase-admin": "^11.11.1",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.77.6"
