--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.1",
     "@mantine/core": "^7.11.0",
     "@mantine/dates": "^7.11.1",
     "@mantine/hooks": "^7.11.0",
@@ -17,6 +18,7 @@
     "@tanstack/react-query": "^5.49.2",
     "dayjs": "^1.11.11",
     "firebase": "^10.12.3",
+    "graphql": "^16.9.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
