--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@next-auth/firebase-adapter": "^2.0.1",
     "@tabler/icons-react": "^3.7.0",
     "@tanstack/react-query": "^5.49.2",
+    "@types/google-one-tap": "^1.2.6",
     "dayjs": "^1.11.11",
     "firebase": "^10.12.3",
     "graphql": "^16.9.0",
