--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@tabler/icons-react": "^3.7.0",
     "@tanstack/react-query": "^5.49.2",
     "dayjs": "^1.11.11",
+    "es-toolkit": "^1.23.0",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.21",
     "react": "^18",
