--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mantine/hooks": "^7.11.0",
     "@tabler/icons-react": "^3.7.0",
     "@tanstack/react-query": "^5.49.2",
+    "@tanstack/react-query-devtools": "^5.59.0",
     "dayjs": "^1.11.11",
     "es-toolkit": "^1.23.0",
     "next": "14.2.3",
