--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "next-auth": "^5.0.0-beta.21",
     "react": "^18",
     "react-dom": "^18",
-    "sass": "^1.77.6"
+    "sass": "^1.77.6",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
