--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^18",
     "react-dom": "^18",
     "sass": "^1.77.6",
+    "uuid": "^10.0.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
