--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@auth/dynamodb-adapter": "^2.5.3",
     "@aws-sdk/client-dynamodb": "^3.658.1",
     "@aws-sdk/lib-dynamodb": "^3.658.1",
+    "@aws-sdk/util-dynamodb": "^3.668.0",
     "@mantine/core": "^7.11.0",
     "@mantine/dates": "^7.11.1",
     "@mantine/hooks": "^7.11.0",
@@ -21,7 +22,7 @@
     "@tanstack/react-query-devtools": "^5.59.0",
     "dayjs": "^1.11.11",
     "es-toolkit": "^1.23.0",
-    "next": "14.2.3",
+    "next": "14.2.10",
     "next-auth": "^5.0.0-beta.21",
     "react": "^18",
     "react-dom": "^18",
@@ -35,6 +36,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/uuid": "^10.0.0",
     "eslint": "^8",
     "eslint-config-next": "14.2.3",
     "postcss": "^8.4.38",
