--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,11 @@
 {
   "$schema": "https://json.schemastore.org/tsconfig",
   "compilerOptions": {
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -19,10 +23,33 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@todo-it/*": [
+        "./src/*"
+      ],
+      "@@todo-it/components/*": [
+        "./src/components/*"
+      ],
+      "@todo-it/api/*": [
+        "./src/api/*"
+      ],
+      "@todo-it/core/*": [
+        "./src/core/*"
+      ],
+      "@todo-it/app/*": [
+        "./src/app/*"
+      ]
     },
-    "types": ["google-one-tap"]
+    "types": [
+      "google-one-tap"
+    ]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
-  "exclude": ["node_modules"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
