--- a/package.json
+++ b/package.json
@@ -1,49 +1,10 @@
 {
-  "name": "next-test",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+  "name": "todo-it",
+  "version": "1.0.0",
+  "description": "",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/load28/todo-it.git"
   },
-  "dependencies": {
-    "@apollo/client": "^3.11.1",
-    "@auth/dynamodb-adapter": "^2.5.3",
-    "@aws-sdk/client-dynamodb": "^3.658.1",
-    "@aws-sdk/lib-dynamodb": "^3.658.1",
-    "@aws-sdk/util-dynamodb": "^3.668.0",
-    "@mantine/core": "^7.11.0",
-    "@mantine/dates": "^7.11.1",
-    "@mantine/hooks": "^7.11.0",
-    "@tabler/icons-react": "^3.7.0",
-    "@tanstack/react-query": "^5.49.2",
-    "@tanstack/react-query-devtools": "^5.59.0",
-    "dayjs": "^1.11.11",
-    "es-toolkit": "^1.23.0",
-    "next": "14.2.10",
-    "next-auth": "^5.0.0-beta.21",
-    "react": "^18",
-    "react-dom": "^18",
-    "sass": "^1.77.6",
-    "uuid": "^10.0.0",
-    "zod": "^3.23.8"
-  },
-  "devDependencies": {
-    "@faker-js/faker": "^8.4.1",
-    "@types/google-one-tap": "^1.2.6",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "@types/uuid": "^10.0.0",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.3",
-    "postcss": "^8.4.38",
-    "postcss-preset-mantine": "^1.15.0",
-    "postcss-simple-vars": "^7.0.1",
-    "prettier": "^3.3.2",
-    "typescript": "^5"
-  },
-  "packageManager": "pnpm@9.11.0+sha512.0a203ffaed5a3f63242cd064c8fb5892366c103e328079318f78062f24ea8c9d50bc6a47aa3567cabefd824d170e78fa2745ed1f16b132e16436146b7688f19b"
+  "private": true
 }
